--- a/Digoel/Web.config
+++ b/Digoel/Web.config
@@ -16,7 +16,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  </appSettings>
+    <add key="recaptchaPublicKey" value="6LckuN4UAAAAAK2HdGQuomQ6eIoU5l4M4g1xX9IX" />
+    <add key="recaptchaPrivateKey" value="6LckuN4UAAAAAH07h8ZlHL3UwB1cKC658OuW" />
+    <add key="recaptchaApiVersion" value="2" />
+    </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
